# cudamemorymanager

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
docs/: CMakeLists.txt  README.md
docs/reference/: CMakeLists.txt  Doxyfile.in
exports/: CMakeLists.txt  LibraryConfig.cmake.in
exports/cmake/: AssignSourceGroup.cmake
libraries/: CMakeLists.txt
libraries/memorymanager/: CMakeLists.txt  README.md
libraries/memorymanager/include/: DeviceMemory.hpp  HostMemory.hpp  MemoryContainer.hpp  MemoryManager.hpp  MemoryManagerHostDev.hpp
libraries/memorymanager/include/cuda/: common.hpp
libraries/memorymanager/include/detail/: MemoryContainer.inl.hpp  MemoryManager.inl.hpp
libraries/memorymanager/include/helper/: device_tuple.hpp  helper_c++14.hpp
libraries/memorymanager/include/interface/: IAllocator.hpp  IMemoryContainer.hpp  IPointer.hpp
libraries/memorymanager/source/: DeviceMemory.cpp  HostMemory.cpp  MemoryManagerHostDev.cpp
libraries/memorymanager/source/cuda/: DeviceMemory.cu  HostMemory.cu
scripts/: CMakeListsForInterface.txt.template  CopyInterfaceToITrajPla.py  DataBlob.json  DataBlobTest.cpp  DataBlobTest.cpp.template  GUIRuntimeParameters.py  GuiDefaultParameters.py  LogViewer.py  ModifyHeaders.py  datToJson.py  movetocpp.py  plotForCuda.py
scripts/PlotProfilingData/: README.md  setup.py
scripts/PlotProfilingData/plotprofilingdata/: plot.py  requirements.txt
scripts/PlotProfilingData/plotprofilingdata/utils/: __init__.py  helper.py
tests/: CMakeLists.txt
tests/memorymanager/: AllocationTests.cpp  CMakeLists.txt  HelperTests.cu  IntegrationTests.cu  MemoryContainerTests.cu  MemoryManagerTests.cpp  gtest_main.cpp
tests/memorymanager/cuda/: CudaUnitTest.hpp
