SET(REFERENCE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(REFERENCE_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")


get_filename_component(DOCS_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR} PATH)
    
EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E make_directory html
			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
			OUTPUT_QUIET
			ERROR_QUIET)

CONFIGURE_FILE(	${REFERENCE_SOURCE_DIR}/Doxyfile.in
		${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
		)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/Doxyfile PROPERTIES GENERATED ON)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
				MAIN_DEPENDENCY ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
				COMMAND ${DOXYGEN_EXECUTABLE} Doxyfile
				WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
				VERBATIM)
MESSAGE("-- Adding doxygen target. Doxygen will generate into \"${CMAKE_CURRENT_BINARY_DIR}/html\"")
ADD_CUSTOM_TARGET(DOC ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/html/index.html)

# Install docs
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html/
	DESTINATION doc/reference
	)

